--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,8 @@
         <jdk.target>21</jdk.target>
         <jquery.version>3.7.1</jquery.version>
         <lms-embedded-services.version>6.3.0</lms-embedded-services.version>
-        <lms-team-spring-boot-it12>6.5.2</lms-team-spring-boot-it12>
+        <lms-team-spring-boot-it12>6.5.2_1</lms-team-spring-boot-it12>
         <lms-canvas-rivet.version>6.2.9.1_1</lms-canvas-rivet.version>
-        <logcaptor.version>2.12.1</logcaptor.version>
         <nodejs.version>v22.18.0</nodejs.version>
         <springdoc-openapi-ui.version>2.8.13</springdoc-openapi-ui.version>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
@@ -196,13 +195,6 @@
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
         </dependency>
-        <dependency>
-            <groupId>io.github.hakky54</groupId>
-            <artifactId>logcaptor</artifactId>
-            <version>${logcaptor.version}</version>
-            <scope>test</scope>
-        </dependency>
-
 
         <!-- Tool specific dependencies -->
         <dependency>
