--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
-    <version>6.1.1</version>
+    <version>6.1.2-SNAPSHOT</version>
     <description>The IU Photo Roster is a tool in Canvas that you can access via the Canvas People tool. The roster displays the name, email address, role, and photo for each member of the course.</description>
     <url>https://github.com/indiana-university/lms-canvas-photoroster/</url>
     <inceptionYear>2015</inceptionYear>
@@ -49,7 +49,7 @@
         <connection>scm:git:https://github.com/indiana-university/lms-canvas-photoroster.git</connection>
         <developerConnection>scm:git:https://github.com/indiana-university/lms-canvas-photoroster.git</developerConnection>
         <url>https://github.com/indiana-university/lms-canvas-photoroster</url>
-        <tag>photoroster-6.1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
